# mcp-client-slackbot-by-itc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
mcp_simple_slackbot/: main.py
mcp_simple_slackbot/config/: configuration.py
mcp_simple_slackbot/core/: llm_client.py  mcp_servers.py  openai_agent.py  server.py  tool.py
mcp_simple_slackbot/slack/: agent_bot.py  bot.py
scripts/: generate_servers_config.py
